# descend

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  Untitled.ipynb  default.nix  flake.nix
.cargo/: config.toml
.github/actions/: ci.yml
cuda-examples/: Makefile  bfs_main.cu  bitonic-sort.cu  cooperative_exec_test.cu  descend.cuh  hist.cu  lud.cu  main.cu  params.cuh  reduce  scalar-mult.cu  scan.cu  scan_generated.cu  scan_generated_new.cu  shared_mem_red.cu  shared_mem_red2.cu  transpose-sharedmem-generated.cu  tree-reduce  tree-reduce-handwritten.cu  vec_add  vec_add_cuda.cu  vec_add_inplace.cu  vec_add_lion.cu  vecadd.exp  vecadd.lib  vector-add  vector-add-cpp-no-thrust.cu  vector-add.cu  vlc_encode.cu  vlc_encode_cg.cu
cuda-examples/asplos/: descend.cuh  hist-descend.cu  hist.cu  jacobisvd-descend.cu  jacobisvd.cu  matmul-descend.cu  matmul.cu  reduce-descend.cu  reduce.cu  scan-descend.cu  scan.cu  sgemm-descend.cu  sgemm.cu  sssp-descend.cu  transpose-descend.cu  transpose.cu
descend_derive/: Cargo.toml
descend_derive/src/: lib.rs
examples/: bfs.desc  bfs_copy.desc  bfs_copy_working.desc  computed_indexing.desc  kernel_call.desc  scan.desc  shared_mem_red.desc  shared_mem_red2.desc  shared_mem_reduction.desc  shared_mem_reduction.rs  shrd_mem_acc_equiv_exec.desc  tree_reduce.desc  tree_reduce_working.desc  vec_add.desc  warp_reduce.desc
opencl-examples/: descend.hpp  shrd_mem_red_comp.sh  shrd_mem_reduce.cl  shrd_mem_reduce.cpp  tree_reduce.cl  tree_reduce.cpp  tree_reduce_comp.sh
src/: ast.rs  dsl.rs  error.rs  lib.rs  main.rs  nat.rs  stdlib.desc  ty.rs  ty_check.rs  types.rs
tests/: ast.rs  basic_syntax.rs  dsl.rs  example_apps.rs  example_infer_apps.rs  rodinia.rs  test_ty_check.rs  vec_add_cuda.txt
(+97 files in other folders)
