[package]
name = "descend"
version = "0.1.0"
authors = ["Köpcke <bastian.koepcke@wwu.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
peg = "0.6.3"
descend_derive = {path = "./descend_derive"}
clap = "^3.0.0-beta.2" # Only beta version available for now

[workspace]
members = ["descend_derive"]