[package]
name = "descend"
version = "0.1.0"
authors = ["Köpcke <bastian.koepcke@wwu.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.peg]
version = "0.6.3"

[dependencies.annotate-snippets]
version = "0.9.0"
features = ["color"]

[dependencies.descend_derive]
path = "./descend_derive"

[workspace]
members = ["descend_derive"]